feat: deploy 7394e716a99c936a5e6e1bbd4947f4412ba51dc6

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       font-size: 14px;
     }
     </style>
-<link rel="stylesheet" href="https://qd-cms-dev.oss-cn-qingdao.aliyuncs.com/common/tools/umi.115134b2.css">
+<link rel="stylesheet" href="/umi.115134b2.css">
 </head>
 <body>
 <div id="root"></div>
-<script src="https://qd-cms-dev.oss-cn-qingdao.aliyuncs.com/common/tools/umi.9273242d.js"></script>
+<script src="/umi.3885d13f.js"></script>
 
 </body></html>
