--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       font-size: 14px;
     }
     </style>
-<link rel="stylesheet" href="/umi.115134b2.css">
+<link rel="stylesheet" href="./umi.115134b2.css">
 </head>
 <body>
 <div id="root"></div>
-<script src="/umi.3885d13f.js"></script>
+<script src="./umi.eefa0c0b.js"></script>
 
 </body></html>
