feat: deploy 725d261575568b8a11293dd4d08a48052b190028

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       font-size: 14px;
     }
     </style>
-<link rel="stylesheet" href="./umi.115134b2.css">
+<link rel="stylesheet" href="https://wukongyang.github.io/Tools/umi.115134b2.css">
 </head>
 <body>
 <div id="root"></div>
-<script src="./umi.2bccb67a.js"></script>
+<script src="https://wukongyang.github.io/Tools/umi.8b0bb25f.js"></script>
 
 </body></html>
