deploy: 6ade685c8fe5c685644808be4c7f34d6091f76e8

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="theme-color" content="#1677ff">
-<link rel="shortcut icon" href="/logo/logo.svg">
+<link rel="shortcut icon" href="/logo.svg">
 <style>.dumi-default-features-item {
       text-align: center;
     }
@@ -15,10 +15,10 @@
       font-size: 14px;
     }
     </style>
-<link rel="stylesheet" href="https://wukongyang.github.io/Tools/umi.115134b2.css">
+<link rel="stylesheet" href="https://wukongyang.github.io/fe-funs/umi.115134b2.css">
 </head>
 <body>
 <div id="root"></div>
-<script src="https://wukongyang.github.io/Tools/umi.43ca755f.js"></script>
+<script src="https://wukongyang.github.io/fe-funs/umi.84238132.js"></script>
 
 </body></html>
