deploy: d707d1e3b06374bd27da4eb9796f12f66c352b02

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="theme-color" content="#1677ff">
-<link rel="shortcut icon" href="/logo.svg">
+<link rel="shortcut icon" href="https://wukongyang.github.io/fe-funs/logo.svg">
 <style>.dumi-default-features-item {
       text-align: center;
     }
@@ -19,6 +19,6 @@
 </head>
 <body>
 <div id="root"></div>
-<script src="https://wukongyang.github.io/fe-funs/umi.84238132.js"></script>
+<script src="https://wukongyang.github.io/fe-funs/umi.65360879.js"></script>
 
 </body></html>
